@@ -27,6 +27,11 @@
 #include <stdint.h>
 
 #include "cmap.h"
+
+#include "dpif-netdev-private-dfc.h"
+#include "dpif-netdev-private-dpif.h"
+#include "dpif-netdev-perf.h"
+#include "dpif-netdev-private-extract.h"
 #include "openvswitch/thread.h"
 
 #ifdef  __cplusplus
@@ -109,6 +114,9 @@ struct dp_netdev_pmd_thread {
 
     /* Pointer for per-DPIF implementation scratch space. */
     void *netdev_input_func_userdata;
+
+    /* Function pointer to call for miniflow_extract() functionality. */
+    ATOMIC(miniflow_extract_func) miniflow_extract_opt;
 
     struct seq *reload_seq;
     uint64_t last_reload_seq;
